<resources>
    <string name="app_name">Мастер Рядом</string>
    <!--DRAWER SETTINGS-->
    <string name="my_orders">Мои заказы</string>
    <string name="drawer_settings">Настройки</string>
    <string name="drawer_news">Новости</string>
    <string name="drawer_help">Поддержка</string>
    <string name="drawer_about">О приложении</string>
    <string name="drawer_guest">Гость</string>
    <string name="drawer_city_name">Ваш город</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!--SIGN DIALOG-->

    <string name="sign_in_title">Регистрация</string>
    <string name="sign_up_title">Вход</string>
    <string name="find_master_text">Я ищу мастера</string>
    <string name="master_text">Я ищу работу</string>
    <string name="main_sign_in_btn_text">Регистрация</string>
    <string name="my_chip_text">Выбрать</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="forgot_password_text">Я не помню пароль</string>
    <string name="helper_password_text">Минимум 8 символов, должен содержать 1 цифру, одну большую и одну маленькую букву.</string>
    <string name="alert_dialog_text">На ваш адрес электронной почты отправлено письмо со ссылкой для активации вашего аккаунта. Если письма нет, проверьте папку \'Спам\'.</string>
    <string name="reset_dialog_text">На ваш адрес электронной почты отправлено письмо со ссылкой для сброса пароля вашего аккаунта. Если письма нет, проверьте папку \'Спам\'.</string>
    <string name="understand">Понятно</string>
    <string name="drawer_text">Войдите или зарегистрируйтесь</string>
    <string name="menu_sign_item">Вход / регистрация</string>
    <string name="question_sign">Впервые пользуетесь нашим приложением?</string>
    <string name="have_account_text">У меня уже есть аккаунт</string>
    <string name="email_password_text">Электронная почта</string>
    <string name="with_phone_text">По номеру телефона</string>
    <string name="sign_in_text">Войти</string>

    <!--NEW MASTER FRAGMENT-->
    <string name="input_your_data">Введите свои данные</string>
    <string name="add_photo_text">Загрузить фото</string>
    <string name="master_profession_text">Ваша профессия *</string>
    <string name="master_name_text">Ваше имя *</string>
    <string name="master_phone_text">Ваш телефон</string>
    <string name="master_city_text">Ваш город *</string>
    <string name="master_email_text">Ваш E-mail</string>
    <string name="master_about_text">О себе</string>
    <string name="save_text">Сохранить</string>
    <string name="confirm_exit">Выйти</string>
    <string name="dismiss_exit">Остаться</string>
    <string name="exit_text">Уже уходите?</string>
    <string name="reset_password_title">Сброс пароля</string>
    <string name="reset_btn_text">Сброс</string>
    <string name="question_category_text">Что вы хотите найти</string>
    <string name="next_step_text">Продолжить</string>
    <string name="phone_hint">Телефон</string>
    <string name="confirm_code_hint">Код подтверждения</string>
    <string name="get_confirm_code">Получить код</string>
    <string name="verify_confirm_code">Проверить код</string>
    <string name="send_sms_text">На указанный номер телефона будет отправлено SMS с кодом подтверждения. Внимание! Можно привязть только один номер телефона.</string>
    <string name="about_text">О приложении</string>
    <string name="footerAbout">© Мастер рядом 1.00 2022</string>
    <string name="licenseAbout">Лицензии</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="terms_of_use">Условия использования</string>
    <string name="review_text">Отзывы</string>
    <string name="service_or_master_text"><font size="35">Услуга или мастер</font></string>
    <string name="no_empty">Поле не может быть пустым</string>
    <string name="alert_dialog_mail_text">Для того чтобы пользоваться всеми возможностями приложения, необходимо добавить адрес электронной почты.</string>
    <string name="add_email_text">Добавить почту</string>
    <string name="menu_profile">Профиль</string>
    <string name="menu_favorite">Избранные</string>
    <string name="menu_message">Сообщения</string>
    <string name="menu_main">Главная</string>
    <string name="menu_orders">Работы</string>
    <string name="main_information">Основная информация</string>
    <string name="experience_title">Опыт работы</string>
    <string name="about_me_text">О мастере</string>
    <string name="not_register_text">Похоже что вы не вошли в свой аккаунт. Если вы еще не регистрировались, сделайте это прямо сейчас.</string>
    <string name="change_photo_text">Сменить фото профиля</string>
    <string name="contacts_title_text">Контакты</string>
    <string name="is_email_ver_text">Вы сможете увидеть контакты другого пользователя, только после того как подтвердите номер своего телефона</string>
    <string name="contacts_is_shadow">"Пользователь ещё не подтвердил свой номер телефона, поэтому его контакты скрыты"</string>
    <string name="send_message_text">Написать</string>
    <string name="change_account_data_title">Изменение личных данных</string>
    <string name="your_age_text">Ваш возраст</string>
    <string name="your_exp_text">Опишите ваш опыт по профессии</string>
    <string name="your_cost_text">Минимальная цена за ваши услуги в BYN</string>
    <string name="cost_title_text">Цена за услуги</string>
    <string name="number_phone_text">Номер телефона</string>
    <string name="confirm_email_text">Почтовый ящик</string>
    <string name="confirm_text">подтверждён</string>
    <string name="need_confirm_text">подтвердить</string>
    <string name="is_not_confirm_text">не подтверждён</string>
    <string name="delete_dialog_text">Внимание! Данная операция полностью удалит ваш аккаунт без возможности восстановления!</string>
    <string name="delete_text">Удалить</string>
    <string name="phone_mask">+375</string>
    <string name="sign_in_with_text">Войти с помощью</string>
    <string name="all_masters_text">Все мастера</string>
    <string name="search_with_param">Поиск по параметрам</string>
    <string name="city_text">Город</string>
    <string name="filter_cost_text">Цена до</string>
    <string name="only_vip_text">Только VIP</string>
    <string name="apply_text">Применить</string>
    <string name="use_social_text">Используя</string>
    <string name="profession_text">Выбранная профессия: </string>
    <string name="online_now_text">Сейчас онлайн</string>
    <string name="your_favorite_masters">Ваши избранные мастера</string>
    <string name="all_jobs_text">Все работы</string>
    <string name="add_job_text">Добавить работу</string>
    <string name="name_of_job_text">Название работы</string>
    <string name="job_name_hint_text">Краткое описание работы</string>
    <string name="full_message_helper">Подробное описание</string>
    <string name="job_message_hint">Опишите подробно, что нужно сделать</string>
    <string name="work_only_vip">Работа только для VIP мастеров</string>
    <string name="create_job_text">Создать работу</string>
    <string name="pay_for_job_text">Палата за работу</string>
    <string name="cost_hint_text">Оплата за выполнение</string>
    <string name="title_job_text">Описание работы</string>
    <string name="posted_by_text">Разместил:</string>
    <string name="job_date_text">Размещена</string>
    <string name="only_in_my_city_text">Только в моем городе</string>
    <string name="my_job_text">Мои работы</string>
    <string name="list_of_dialogs_title">Ваши диалоги</string>
    <string name="dialog_text">Диалог</string>
    <string name="empty_list_reviews">Отзывов еще нет</string>
    <string name="add_reviews_text">Добавить отзыв</string>
    <string name="new_review_text">Новый отзыв</string>
    <string name="your_review_text">Ваш отзыв</string>
    <string name="your_grade_text">Ваша оценка</string>

</resources>