<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/actionMyOrders"
        android:title="@string/my_orders"
        android:visible="false"
        android:icon="@drawable/ic_shopping_bag"/>

    <item
        android:id="@+id/actionSettings"
        android:title="@string/drawer_settings"
        android:visible="false"
        android:icon="@drawable/ic_settings"/>

    <item
        android:id="@+id/actionSign"
        android:title="@string/menu_sign_item"
        android:icon="@drawable/ic_account"/>

    <item
        android:id="@+id/actionNews"
        android:title="@string/drawer_news"
        android:icon="@drawable/ic_newspaper"/>

    <item
        android:id="@+id/actionHelp"
        android:visible="false"
        android:title="@string/drawer_help"
        android:icon="@drawable/ic_help"/>

    <item
        android:id="@+id/actionAbout"
        android:title="@string/drawer_about"
        android:icon="@drawable/ic_info"/>

</menu>