<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/actionHome"
        android:title="@string/menu_main"
        android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/actionOrders"
        android:title="@string/menu_orders"
        android:icon="@drawable/ic_shopping_bag"/>

    <item
        android:id="@+id/actionMessage"
        android:title="@string/menu_message"
        android:icon="@drawable/ic_mail"/>

    <item
        android:id="@+id/actionFavorite"
        android:title="@string/menu_favorite"
        android:icon="@drawable/ic_favorite"/>

    <item
        android:id="@+id/actionProfile"
        android:title="@string/menu_profile"
        android:icon="@drawable/ic_account"/>


</menu>