<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/fragment_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/aboutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:text="@string/about_text"/>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/aboutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/aboutHeader"
        app:layout_constraintBottom_toTopOf="@id/termsOfUse"
        android:src="@drawable/logo"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/termsOfUse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/privacyPolicy"
        android:text="@string/terms_of_use"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/privacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/license"
        android:text="@string/privacy_policy"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/versionAbout"
        android:text="@string/licenseAbout"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:gravity="center"
        android:id="@+id/versionAbout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/footerAbout"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
