<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingTop="50dp"
    android:paddingEnd="20dp"
    android:paddingBottom="50dp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/alertText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:textSize="@dimen/title_size"
        android:text="@string/exit_text"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/runMan"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_run"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alertText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/positiveBtn"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_exit"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/negativeBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/runMan" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/negativeBtn"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:text="@string/dismiss_exit"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/positiveBtn"
        app:layout_constraintTop_toBottomOf="@id/runMan" />

</androidx.constraintlayout.widget.ConstraintLayout>