<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetContainer"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:alpha="0.95"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/fragment_padding"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/bottomSheetLine"
        android:layout_width="35dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/my_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/filterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/search_with_param"
        android:textSize="16sp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintTop_toBottomOf="@id/bottomSheetLine" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/switchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        app:layout_constraintTop_toBottomOf="@id/filterTitle">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/onlyInMyCity"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/only_in_my_city_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/onlyInMyCitySwitch"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/onlyInMyCity" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/onlyMyJob"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:text="@string/my_job_text"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/onlyInMyCity" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/onlyMyJobSwitch"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/onlyMyJob" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>